# rules_go

./: .travis.yml  AUTHORS  BUILD  BUILD.bazel  CONTRIBUTORS  README.md  README.rst  Vendoring.md  WORKSPACE  deprecation.rst  hack_go_repository.bzl  roadmap.rst
.bazelci/: presubmit.yml
examples/bindata/: BUILD.bazel  bindata.bzl
examples/cgo/: BUILD  BUILD.bazel  import_example.go
examples/cgo/cc_dependency/: BUILD  c_version.c  cxx_version.cc
examples/cgo/example_command/: BUILD  BUILD.bazel  example_command_test.sh
examples/cgo/skip_go_library/: BUILD
examples/lib/: BUILD  BUILD.bazel  lib.go  lib_test.go  lib_x_test.go
examples/lib/deep/: BUILD  BUILD.bazel
examples/monobuild/cmd/: BUILD  BUILD.bazel
examples/monobuild/lib1/: BUILD  BUILD.bazel
examples/monobuild/lib2/: BUILD  BUILD.bazel
examples/proto/: BUILD  BUILD.bazel  gs.go  proto_test.go
examples/proto/dep/: BUILD  BUILD.bazel  useful.proto
examples/proto/embed/: BUILD.bazel
examples/proto/gogo/: BUILD.bazel
examples/proto/gostyle/: BUILD  BUILD.bazel  gostyle.proto
examples/proto/grpc/: BUILD  BUILD.bazel  my_svc.proto
examples/proto/lib/: BUILD  BUILD.bazel  lib.proto  lib2.proto
examples/stamped_bin/: BUILD  BUILD.bazel  main.go  stamp.go  stamped_bin_test.go
examples/stamped_bin/stamp/: BUILD  BUILD.bazel  stamp.go
extras/: bindata.bzl  embed_data.bzl
go/: BUILD.bazel  core.rst  def.bzl  dependencies.rst  deprecated.rst  deps.bzl  extras.rst  modes.rst  nogo.rst  providers.rst  toolchains.rst  workspace.rst
go/config/: BUILD.bazel
go/platform/: BUILD.bazel  apple.bzl  cross.bzl  list.bzl
go/private/: BUILD  BUILD.bazel  BUILD.sdk.bazel  apple.bzl  asm.bzl  binary.bzl  bzl_format.bzl  cgo.bzl  common.bzl  context.bzl  def.bzl  gazelle.bzl  go_prefix.bzl  go_repositories.bzl  go_repository.bzl  go_root.bzl  go_tool_binary.bzl  go_toolchain.bzl  info.bzl  json.bzl  library.bzl  lines_sorted_test.bzl  mode.bzl  nogo.bzl  path.bzl  platforms.bzl  providers.bzl  repositories.bzl  repository_tools.bzl  sdk.bzl  sdk_list.bzl  single_output_test.bzl  test.bzl  toolchain.bzl  wrappers.bzl
go/private/actions/: action.bzl  archive.bzl  asm.bzl  binary.bzl  compile.bzl  compilepkg.bzl  cover.bzl  library.bzl  link.bzl  pack.bzl  stdlib.bzl
go/private/compat/: compat_repo.bzl  darwin.bzl.tpl  v18.bzl  v22.bzl  v23.bzl  v25.bzl  v26.bzl
go/private/rules/: aspect.bzl  binary.bzl  builders.bzl  cgo.bzl  helpers.bzl  info.bzl  library.bzl  nogo.bzl  prefix.bzl  root.bzl  rule.bzl  sdk.bzl  source.bzl  stdlib.bzl  test.bzl  transition.bzl  wrappers.bzl
go/private/skylib/: README.rst
go/private/skylib/lib/: new_sets.bzl  paths.bzl  unittest.bzl  versions.bzl
go/private/tools/: embed_data.bzl  files_equal_test.bzl  gazelle.bzl  go_tool_binary.bzl  overlay_repository.bzl  path.bzl  single_output_test.bzl  vet.bzl
go/toolchain/: BUILD  BUILD.bazel  toolchains.bzl
go/tools/: BUILD  BUILD.bazel  generate_test_main.go
go/tools/bazel/: BUILD  BUILD.bazel  README.md  bazel.go  bazel_test.go  runfiledir.go  runfilemanifest.go  runfiles.go  runfiles_test.go
go/tools/bazel_benchmark/: bazel_benchmark.go
proto/: BUILD.bazel  compiler.bzl  core.rst  def.bzl  go_proto_library.bzl  gogo.bzl  toolchain.bzl  well_known_types.bzl
proto/wkt/: BUILD.bazel  well_known_types.bzl
tests/: BUILD  README.rst  bazel_tests.bzl  non_bazel_tests_common.bash  run_non_bazel_tests.bash
tests/asm_include/: BUILD  BUILD.bazel
tests/binary_test_outputs/: BUILD
tests/build_constraints/: BUILD  BUILD.bazel  build_constraints_test.go  cgo_linux.go  cgo_unknown.go
tests/build_gazelle_with_1.7/: WORKSPACE.in  build_gazelle_with_1.7.bash
tests/build_with_1.7.5/: BUILD.bazel  test_1.7_test.go  test_other_test.go
tests/build_with_old_sdk/: BUILD.bazel  new_test.go  old_test.go
tests/cgo_filtered/: BUILD  BUILD.bazel
tests/cgo_library_root_dir/: BUILD  BUILD.bazel  cgo_library_root_dir.bash
tests/cgo_multi_dir/: BUILD  BUILD.bazel
tests/cgo_opts/: BUILD.bazel
tests/cgo_pthread_flag/: BUILD  BUILD.bazel
tests/cgo_pure/: BUILD.bazel  cgo_pure_test.go  common.go
tests/cgo_select/: BUILD  BUILD.bazel
tests/cgo_sys_hdr/: BUILD  BUILD.bazel
tests/cgo_trans_deps/: BUILD  BUILD.bazel
tests/core/: README.rst
tests/coverage/: BUILD  BUILD.bazel  coverage.bash  coverage_test.go
tests/cross/: BUILD.bazel  cross_test.go
tests/custom_go_toolchain/: BUILD  BUILD.bazel  custom_go_toolchain.bash  version_test.go
tests/empty_package/: BUILD.bazel
tests/extldflags_rpath/: BUILD
tests/gc_opts_unsafe/: BUILD  BUILD.bazel  gc_opts_unsafe.bash  unsafe.go
tests/go_embed_data/: BUILD  BUILD.bazel  embed_test.go
tests/info/: BUILD.bazel
tests/integration/: README.rst
tests/new_go_repository_build_name/: new_go_repository_build_name.bash
tests/no_prefix/: BUILD  BUILD.bazel
tests/package_named_build/: BUILD  BUILD.bazel
tests/package_named_build/local/: BUILD.in
tests/package_named_build/remote/: WORKSPACE
tests/popular_repos/: BUILD.bazel  WORKSPACE.in  popular_repos.bash  popular_repos.bzl  popular_repos.py
tests/proto_ignore_go_package_option/: BUILD  BUILD.bazel  b.proto
tests/providers/: BUILD.bazel  test.bzl
tests/race/: BUILD.bazel  race_on_test.sh
tests/race/racy/: BUILD.bazel
tests/reproducibility/: BUILD.bazel  reproducible_binary_test.go  test.sh
tests/reproducibility/cgo/: adder.go
tests/reproducible_binary/: BUILD.bazel  reproducible_binary_test.go
tests/slash_names/: BUILD  BUILD.bazel
tests/tags_os/: BUILD  bar_d.go  bar_l.go  bar_unknown.go  baz_darwin.s  baz_linux.s  baz_other.s  foo_darwin.go  foo_linux.go  foo_unknown.go  tags_os_test.go
tests/test_build_constraints/: BUILD  BUILD.bazel
tests/test_chdir/: BUILD.bazel  remote.bzl  test_chdir.bash
tests/test_filter_test/: BUILD  test_filter_test.bash
tests/test_filter_test_1.7.5/: BUILD  BUILD.bazel  test_filter_test_1.7.5.bash
tests/test_rundir/: BUILD  rundir_test.go
tests/trans_dep_error/: BUILD  BUILD.bazel
tests/transitive_data/: BUILD
tools/: bazel.rc
(+282 files in other folders)
