load("@io_bazel_rules_go//go:def.bzl", "go_path", "go_vet_test")
load("@io_bazel_rules_go//go/private:tools/lines_sorted_test.bzl", "lines_sorted_test")
load("@io_bazel_rules_go//go/private:rules/nogo.bzl", "nogo")
load("@io_bazel_rules_go//go/private:rules/info.bzl", "go_info")
load("@io_bazel_rules_go//go/private:context.bzl", "go_context_data")
load("@io_bazel_rules_go//go/private:rules/stdlib.bzl", "stdlib")
load("@io_bazel_rules_go//go/private:rules/builders.bzl", "builders")

stdlib(
    name = "stdlib",
    visibility = ["//visibility:public"],
)

builders(
    name = "builders",
    visibility = ["//visibility:public"],
)

nogo(
    name = "default_nogo",
    visibility = ["//visibility:public"],
)

go_context_data(
    name = "go_context_data",
    strip = select({
        "@io_bazel_rules_go//go/private:strip-always": "always",
        "@io_bazel_rules_go//go/private:strip-sometimes": "sometimes",
        "@io_bazel_rules_go//go/private:strip-never": "never",
    }),
    visibility = ["//visibility:public"],
)

lines_sorted_test(
    name = "contributors_sorted_test",
    size = "small",
    cmd = "grep -v '^#' $< | grep -v '^$$' >$@",
    error_message = "Contributors must be sorted by first name",
    file = "CONTRIBUTORS",
)

lines_sorted_test(
    name = "authors_sorted_test",
    size = "small",
    cmd = "grep -v '^#' $< | grep -v '^$$' >$@",
    error_message = "Authors must be sorted by first name",
    file = "AUTHORS",
)

# This could be any file, used as an anchor point for the directory in tests
exports_files(["AUTHORS"])

go_path(
    name = "all_srcs",
    tags = ["manual"],
    deps = [
        "//go/tools/builders:asm",
        "//go/tools/builders:cgo",
        "//go/tools/builders:compile",
        "//go/tools/builders:embed",
        "//go/tools/builders:generate_nogo_main",
        "//go/tools/builders:generate_test_main",
        "//go/tools/builders:link",
        "//go/tools/builders:md5sum",
        "//go/tools/fetch_repo",
    ],
)

go_vet_test(
    name = "vet",
    data = [":all_srcs"],
)

go_info()
