load("//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_proto_compiler(
    name = "go_grpc",
    options = ["plugins=grpc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_proto_compiler(
    name = "go_proto_validate",
    plugin = "@com_github_mwitkow_go_proto_validators//protoc-gen-govalidators",
    visibility = ["//visibility:public"],
    suffix = ".validator.pb.go",
    valid_archive = False,
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

