load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//examples/bindata:bindata.bzl", "bindata")

bindata(
  name = "data",
  package = "bindata",
  srcs = glob(["data/*"]),
)

go_library(
  name = "go_default_library",
  srcs = [":data"],
)

go_test(
  name = "go_default_test",
  srcs = ["bindata_test.go"],
  library = ":go_default_library",
  size = "small"
)