load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gs.go"],
    deps = [
        "//examples/proto/gostyle:go_default_library",
        "//examples/proto/lib:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "proto_test",
    size = "small",
    srcs = ["proto_test.go"],
    deps = [
        "//examples/proto/lib:go_default_library",
    ],
)
