load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gs.go"],
    importpath = "github.com/bazelbuild/rules_go/examples/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/proto/gostyle:gostyle_go_proto",
        "//examples/proto/lib:lib_go_proto",
    ],
)

go_test(
    name = "proto_test",
    size = "small",
    srcs = ["proto_test.go"],
    importpath = "github.com/bazelbuild/rules_go/examples/proto",
    pure = "off",
    deps = [
        "//examples/proto/embed:go_default_library",
        "//examples/proto/lib:lib_go_proto",
    ],
)

go_test(
    name = "proto_pure_test",
    size = "small",
    srcs = ["proto_test.go"],
    importpath = "github.com/bazelbuild/rules_go/examples/proto",
    pure = "on",
    deps = [
        "//examples/proto/embed:go_default_library",
        "//examples/proto/lib:lib_go_proto",
    ],
)
