package(default_visibility = [ "//visibility:public" ])

filegroup(
  name = "files",
  srcs = glob([
    "bin/go*",
    "src/**",
    "pkg/**",
  ]),
)

filegroup(
  name = "tools",
  srcs = select({
    "@io_bazel_rules_go//go/platform:darwin_amd64": ["@local_config_cc//:cc_wrapper"],
    "//conditions:default": None,
  }),
)

exports_files(["packages.txt"])
