load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test", "go_source")

go_source(
    name = "cross",
    srcs = ["main.go"],
)

go_binary(
    name = "windows",
    embed = [":cross"],
    basename = "cross",
    goos = "windows",
    goarch = "amd64",
    pure = "on",
)

go_binary(
    name = "linux",
    embed = [":cross"],
    basename = "cross",
    goos = "linux",
    goarch = "amd64",
    pure = "on",
)

go_binary(
    name = "darwin",
    embed = [":cross"],
    basename = "cross",
    goos = "darwin",
    goarch = "amd64",
    pure = "on",
)

go_test(
    name = "cross_test",
    size = "small",
    srcs = ["cross_test.go"],
    data = [
      ":linux",
      ":darwin",
      ":windows",
    ],
)
