load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test", "go_source")

go_source(
    name = "cross",
    srcs = ["main.go"],
)

go_binary(
    name = "windows",
    basename = "cross",
    embed = [":cross"],
    goarch = "amd64",
    goos = "windows",
    pure = "on",
)

go_binary(
    name = "linux",
    basename = "cross",
    embed = [":cross"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

go_binary(
    name = "darwin",
    basename = "cross",
    embed = [":cross"],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
)

go_test(
    name = "cross_test",
    size = "small",
    srcs = ["cross_test.go"],
    data = [
        ":darwin",
        ":linux",
        ":windows",
    ],
)
