load("@io_bazel_rules_go//go:def.bzl", "go_prefix", "go_test", "go_binary")
load("@io_bazel_rules_go//tests:bazel_tests.bzl", "bazel_test")

go_prefix("github.com/bazelbuild/rules_go/tests/custom_go_toolchain")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["version_test.go"],
    tags = ["manual"],
)

bazel_test(
    name = "custom_go_toolchain",
    build = """
load("@io_bazel_rules_go//go:def.bzl", "go_toolchain")
go_toolchain(name="my_linux_toolchain", target="linux_amd64")
go_toolchain(name="my_darwin_toolchain", target="darwin_amd64")
""",
    command = "test",
    config = "fetch",
    go_version = "",
    tags = ["dev"],
    targets = [":go_default_test"],
    workspace = """

load("@io_bazel_rules_go//go/private:toolchain.bzl", "go_download_sdk")
load("@io_bazel_rules_go//go:def.bzl", "go_rules_dependencies")

go_download_sdk(
    name = "go_sdk",
    sdks = {
        "linux_amd64":       ("go1.8.1.linux-amd64.tar.gz", "a579ab19d5237e263254f1eac5352efcf1d70b9dacadb6d6bb12b0911ede8994"),
        "darwin_amd64":      ("go1.8.1.darwin-amd64.tar.gz", "25b026fe2f4de7c80b227f69588b06b93787f5b5f134fbf2d652926c08c04bcd"),
    },
)
register_toolchains(
    "@//:my_linux_toolchain", "@//:my_linux_toolchain-bootstrap",
    "@//:my_darwin_toolchain", "@//:my_darwin_toolchain-bootstrap",
)

go_rules_dependencies()

""",
)
